# lettermint-django

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-docs.yml  publish.yml  run-tests.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  usage.md
docs/project/: changelog.md
docs/reference/: backend.md  design.md  roadmap.md  settings.md
lettermint_django/: __init__.py  backend.py  version.py
tests/: conftest.py  settings.py  test_backend.py
