[project]
name = "lettermint-django"
version = "0.1.0"
description = "Django email backend for Lettermint"
authors = [{name = "Sjoerd Zaalberg van Zelst", email = "hello@zzinnovate.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["lettermint", "django", "email", "backend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
]

dependencies = [
    "lettermint>=2.0.0",
    "django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<8.5.0",
    "pytest-cov>=5,<7.0",
    "pytest-mock>=3.14.1,<4.0",
    "pytest-django>=4.8.0,<5.0",
]
docs = [
    "watchdog>=4.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.10.0",
]
all = [
    "lettermint-django[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/zzinnovate/lettermint-django"
Repository = "https://github.com/zzinnovate/lettermint-django"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lettermint_django*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
DJANGO_SETTINGS_MODULE = "tests.settings"
